# mockart

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  mockart.c  mockart.h
test/: Makefile.am  mocking-target.c  mocking-target.h  test-mockart.c  test-steal-strdup.c  test.h
